--- a/asstes/css/style.css
+++ b/asstes/css/style.css
@@ -295,7 +295,7 @@ input:focus,textarea:focus,button:focus{
   }
 
 
-  /* hero-it-ads section styling start */
+  /* hero-it-freethemeads section styling start */
 
   .hero-nine-bg{
     background-size: cover;
@@ -305,7 +305,7 @@ input:focus,textarea:focus,button:focus{
 
 
   /***************************************
-   ADS about section styling start
+   freethemeads about section styling start
 
    ***************************************/
 
@@ -386,7 +386,7 @@ input:focus,textarea:focus,button:focus{
 
 
 /***************************************
-  ADS App Two Features styling 
+  freethemeads App Two Features styling 
 
 ***************************************/
 
@@ -420,7 +420,7 @@ input:focus,textarea:focus,button:focus{
 
 
 /***************************************
- ADS integration section start
+ freethemeads integration section start
 
 ***************************************/
 
