this theme comments adding and test-domain change all files

--- a/asstes/css/style.css
+++ b/asstes/css/style.css
@@ -294,7 +294,7 @@ input:focus,textarea:focus,button:focus{
   }
 
 
-  /* hero-it-freethemeads section styling start */
+  /* hero-it-free-theme-ads section styling start */
 
   .hero-nine-bg{
     background-size: cover;
@@ -304,7 +304,7 @@ input:focus,textarea:focus,button:focus{
 
 
   /***************************************
-   freethemeads about section styling start
+   free-theme-ads about section styling start
 
    ***************************************/
 
@@ -385,7 +385,7 @@ input:focus,textarea:focus,button:focus{
 
 
 /***************************************
-  freethemeads App Two Features styling 
+  free-theme-ads App Two Features styling 
 
 ***************************************/
 
@@ -419,7 +419,7 @@ input:focus,textarea:focus,button:focus{
 
 
 /***************************************
- freethemeads integration section start
+ free-theme-ads integration section start
 
 ***************************************/
 
