--- a/rtl.css
+++ b/rtl.css
@@ -1,21 +1,21 @@
 /*!
-Theme Name: freethemeads
+Theme Name: free-theme-ads
 Theme URI: http://underscores.me/
-Author: freethemeads
-Author URI: http://freethemeads
-Description: freethemeads
+Author: free-theme-ads
+Author URI: http://free-theme-ads
+Description: free-theme-ads
 Version: 1.0.0
 Tested up to: 5.4
 Requires PHP: 5.6
 License: GNU General Public License v2 or later
 License URI: LICENSE
-Text Domain: freethemeads
+Text Domain: free-theme-ads
 Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-comments, translation-ready
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned.
 
-freethemeads is based on Underscores https://underscores.me/, (C) 2012-2020 Automattic, Inc.
+free-theme-ads is based on Underscores https://underscores.me/, (C) 2012-2020 Automattic, Inc.
 Underscores is distributed under the terms of the GNU GPL v2 or later.
 
 Normalizing styles have been helped along thanks to the fine work of
